<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="preview_label">Preview</string>
    <string name="icons">Icons</string>
    <string name="grid">Grid</string>
    <string name="layout">Layout</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="style">Style</string>
    <string name="background_opacity">Background opacity</string>
    <string name="app_drawer_folder">App drawer folders</string>
    <string name="advanced">Advanced</string>
    <string name="general_label">General</string>
    <string name="general_description">Colors, icon packs, notification dots</string>
    <string name="home_screen_label">Home screen</string>
    <string name="home_screen_description">Feed, grid, icons</string>
    <string name="dock_label">Dock</string>
    <string name="dock_description">Search bar, icon count</string>
    <string name="app_drawer_label">App drawer</string>
    <string name="app_drawer_description">Hidden apps, column count, icons</string>
    <string name="drawer_search_description">Web suggestions, global search</string>
    <string name="folders_label">Folders</string>
    <string name="folders_description">Row and column count</string>
    <string name="gestures_label">Gestures</string>
    <string name="gestures_description">Taps and swipes</string>
    <string name="quickstep_label">Recents screen</string>
    <string name="quickstep_description">Clear all button, corner radius</string>
    <string name="backup_and_restore_label">Backup and restore</string>
    <string name="backup_and_restore_description">Save current setup, restore backups</string>
    <string name="about_label">About</string>
    <string name="extras_label">Extras</string>
    <string name="extras_description">Experimental, debug &amp; more</string>
    <string name="workspace_label">Workspace</string>
    <string name="internal_label">Internal</string>
    <string name="internal_description">Internal may be less stable than other experimental groups</string>
    <string name="font_picker_label">Font customization</string>
    <string name="font_picker_description">Some text remains unchanged</string>
    <string name="workspace_increase_max_grid_size_label">Increase maximum grid size limit</string>
    <string name="workspace_increase_max_grid_size_description">Increase maximum allowed home screen grid size from 10 &#xd7; 10 to 20 &#xd7; 20</string>
    <string name="always_reload_icons_label">Always reload icons</string>
    <string name="always_reload_icons_description">Avoid using cached icons from icon packs</string>
    <string name="always_reload_icons_warning">This will cause icons to refresh regularly, impacting performance. Turn off if the icon pack doesn\'t update regularly.</string>
    <string name="show_deck_layout">Deck layout</string>
    <string name="show_deck_layout_description">Show a layout option to hide the app drawer and automatically add new apps to the home screen</string>
    <string name="folder_shape_label">Folder shape</string>
    <string name="gesturenavcontract_label">Use GestureNavContract API</string>
    <string name="gesturenavcontract_description">Support Android\'s enhanced animations when using gesture navigation</string>
    <string name="gesturenavcontract_warning_incompatibility">Your device isn\'t fully supported. This may cause visual issue for some animations.</string>
    <string name="app_closing_animation">App closing animation</string>
    <string name="suggestion_pref_screen_title">Suggestions</string>
    <string name="notification_dots">Notification dots</string>
    <string name="show_notification_count">Show notification counter</string>
    <string name="notification_dots_color">Notification dot color</string>
    <string name="notification_dots_text_color">Notification counter color</string>
    <string name="icon_style_label">Icon style</string>
    <string name="icon_shape_label">Icon shape</string>
    <string name="icon_sizes">Icon size</string>
    <string name="show_labels">Show labels</string>
    <string name="label_size">Label size</string>
    <string name="twoline_label">Use multiple lines</string>
    <string name="transparent_background_icons_label">Transparent icon backgrounds</string>
    <string name="transparent_background_icons_description">For themed icons and auto-adaptive icons</string>
    <string name="auto_adaptive_icons_label">Auto-adaptive icons</string>
    <string name="auto_adaptive_icons_description">For all non-adaptive icons</string>
    <string name="shadow_bg_icons_label">Show shadow behind icons</string>
    <string name="background_lightness_label">Background lightness</string>
    <string name="adaptive_icon_background_description">Use 100% background lightness for white</string>
    <string name="remove_all_views_from_home_screen">Clear home screen</string>
	<string name="colorized_backgrounds_label">Smart icon backgrounds</string>
    <string name="colorized_backgrounds_description">Analyze icon pixels for accurate background colors and scaling</string>
    <string name="treat_white_adaptive_icons_label">Colorize foreground-only adaptive icons</string>
    <string name="treat_white_adaptive_icons_description">Color the background of adaptive icons that have no background layer, using the icon\'s dominant color</string>
    <string name="font_label">Font (experimental)</string>
    <string name="fontWorkspace">General</string>
    <string name="fontHeading">Headings</string>
    <string name="fontHeadingMedium">Headings (medium)</string>
    <string name="fontBody">Body</string>
    <string name="fontBodyMedium">Body (medium)</string>
    <string name="theme_label">Theme</string>
    <string name="color_style_label">Color style</string>
    <string name="colors">Colors</string>
    <string name="accent_color">Accent color</string>
    <string name="smartspace_widget">At a Glance</string>
    <string name="smartspace_widget_description">What to show</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="support">Support</string>
    <string name="translate">Translate</string>
    <string name="donate">Donate</string>
    <string name="community">Community</string>
    <string name="x_twitter" translatable="false">X</string>
    <string name="telegram">Telegram</string>
    <string name="news">News</string>
    <string name="discord" translatable="false">Discord</string>
    <string name="legal">Legal</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="updater">Updates</string>
    <string name="gesture_double_tap">Double tap</string>
    <string name="home_screen_rotation_label">Home screen rotation</string>
    <string name="home_screen_rotation_description">Allow home screen rotation when the device is rotated</string>
    <string name="auto_updater_label">Automatically check for updates</string>
    <string name="auto_updater_description">Checks for Nightly updates when opening the About screen</string>
    <string name="wallpaper_blur">Blur wallpaper (experimental)</string>
    <string name="wallpaper_background_blur">Blur intensity</string>
    <string name="wallpaper_background_blur_factor">Factor threshold</string>
    <string name="auto_add_shortcuts_label">Add new apps to home screen</string>
    <string name="minus_one_enable">Show feed</string>
    <string name="minus_one">Feed</string>
    <string name="feed_provider">Feed provider</string>
    <string name="wallpaper_scrolling_label">Scroll wallpaper</string>
    <string name="wallpaper_depth_effect_label">Wallpaper depth effect</string>
    <string name="wallpaper_depth_effect_description">Zoom in and out of the wallpaper when transitioning between areas of the launcher</string>
    <string name="show_sys_ui_scrim">Top shadow</string>
    <string name="infinite_scrolling_label">Infinite scrolling</string>
    <string name="infinite_scrolling_description">Swipe to loop between the first and last pages</string>
    <string name="home_screen_grid">Home screen grid</string>
    <string name="home_screen_lock">Lock home screen</string>
    <string name="home_screen_lock_description">Prevent changes to the home screen layout</string>
    <string name="popup_menu">Pop-up menu</string>
    <string name="status_bar_label">Status bar</string>
    <string name="show_status_bar">Show status bar</string>
    <string name="dark_status_bar_label">Dark status bar</string>
    <string name="status_bar_clock_label">Status bar clock</string>
    <string name="status_bar_clock_description">Dynamically hide the status bar clock on the first screen</string>
    <string name="home_screen_text_color">Text color</string>
    <string name="force_rounded_widgets">Rounded corners</string>
    <string name="allow_widget_overlap">Allow overlap</string>
    <string name="force_widget_resize_label">Enforce widget resizing</string>
    <string name="force_widget_resize_description">Allow resizing of widgets that are constrained to a specific size</string>
    <string name="widget_unlimited_size_label">Remove size constraints</string>
    <string name="widget_unlimited_size_description">Remove the minimum and maximum size restrictions of widgets</string>
    <string name="search_bar_label">Search bar</string>
    <string name="search_bar_settings">Search bar settings</string>
    <string name="hidden_apps_label">Hidden apps</string>
    <string name="pref_all_apps_remember_position_title">Remember scroll position</string>
    <string name="pref_all_apps_remember_position_description">Save the last scrolled location when closing the app drawer</string>
    <string name="pref_all_apps_show_scrollbar_title">Show scrollbar</string>
    <string name="app_drawer_columns">App drawer columns</string>
    <string name="row_height_label">Row height</string>
    <string name="app_drawer_haptic_feedback_label">Haptic feedback</string>
    <string name="app_drawer_indent_label">Horizontal padding</string>
    <string name="app_drawer_bg_color_label">Background color</string>
    <string name="work_profile_tab_background_label">Tab background color</string>
    <string name="pref_all_apps_search_bar_background">Show background behind search bar</string>
    <string name="work_profile_tab_container_background_label">Show background behind tabs</string>
    <string name="show_app_search_bar">Show search bar</string>
    <string name="pref_search_auto_show_keyboard">Automatically show keyboard</string>
    <string name="allapps_match_qsb_style_label">Match dock search bar actions</string>
    <string name="allapps_match_qsb_style_description">Tapping the dock search bar opens the app drawer search view</string>
    <string name="app_search_algorithm">Search algorithm</string>
    <string name="show_search_result_types">Show in search results</string>
    <string name="search_pref_result_apps_and_shortcuts_title">Apps and shortcuts</string>
    <string name="search_pref_result_shortcuts_title">App shortcuts</string>
    <string name="search_pref_result_people_title">People</string>
    <string name="search_pref_result_settings_title">Android settings</string>
    <string name="search_pref_result_files_title">Files</string>
    <string name="search_pref_result_web_title">Web suggestions</string>
    <string name="search_pref_result_history_title">Search history</string>
    <string name="all_apps_search_result_calculator">Calculator</string>
    <string name="max_apps_result_count_title">Maximum number of apps</string>
    <string name="max_people_result_count_title">Maximum number of people</string>
    <string name="max_file_result_count_title">Maximum number of files</string>
    <string name="max_settings_entry_result_count_title">Maximum number of settings</string>
    <string name="max_recent_result_count_title">Maximum items for search history</string>
</resources>