<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_label">

        <Preference
            android:key="home_layout"
            android:title="@string/layout" />

        <SwitchPreferenceCompat
            android:key="add_icon_to_home"
            android:title="@string/auto_add_shortcuts_label" />

        <Preference
            android:key="double_tap_gesture"
            android:title="@string/gesture_double_tap" />

        <SwitchPreferenceCompat
            android:key="infinite_scrolling"
            android:title="@string/infinite_scrolling_label"
            android:summary="@string/infinite_scrolling_description" />

        <Preference
            android:key="clear_home_screen"
            android:title="@string/remove_all_views_from_home_screen" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/minus_one">

        <SwitchPreferenceCompat
            android:key="enable_feed"
            android:title="@string/minus_one_enable" />

        <Preference
            android:key="feed_provider"
            android:title="@string/feed_provider" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/style">

        <ListPreference
            android:key="workspace_text_color"
            android:title="@string/home_screen_text_color" />

        <Preference
            android:key="app_closing_animation"
            android:title="@string/app_closing_animation" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/wallpaper">

        <SwitchPreferenceCompat
            android:key="wallpaper_scrolling"
            android:title="@string/wallpaper_scrolling_label" />

        <SwitchPreferenceCompat
            android:key="wallpaper_depth_effect"
            android:title="@string/wallpaper_depth_effect_label"
            android:summary="@string/wallpaper_depth_effect_description" />

        <SwitchPreferenceCompat
            android:key="show_top_shadow"
            android:title="@string/show_sys_ui_scrim" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/layout">

        <Preference
            android:key="home_screen_grid"
            android:title="@string/home_screen_grid" />

        <SwitchPreferenceCompat
            android:key="lock_home_screen"
            android:title="@string/home_screen_lock"
            android:summary="@string/home_screen_lock_description" />

        <Preference
            android:key="popup_menu"
            android:title="@string/popup_menu" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/status_bar_label">

        <SwitchPreferenceCompat
            android:key="show_status_bar"
            android:title="@string/show_status_bar" />

        <SwitchPreferenceCompat
            android:key="dark_status_bar"
            android:title="@string/dark_status_bar_label" />

        <SwitchPreferenceCompat
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_label"
            android:summary="@string/status_bar_clock_description" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/icons">

        <app.lawnchair.settings.ui.preference.FloatSeekBarPreference
            android:key="home_icon_size_factor"
            android:title="@string/icon_sizes"
            android:defaultValue="1.0" />

        <SwitchPreferenceCompat
            android:key="show_icon_labels_home"
            android:title="@string/show_labels" />

        <app.lawnchair.settings.ui.preference.FloatSeekBarPreference
            android:key="home_icon_label_size_factor"
            android:title="@string/label_size"
            android:defaultValue="1.0" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/widget_button_text">

        <SwitchPreferenceCompat
            android:key="rounded_widgets"
            android:title="@string/force_rounded_widgets" />

        <SwitchPreferenceCompat
            android:key="allow_widget_overlap"
            android:title="@string/allow_widget_overlap" />

        <SwitchPreferenceCompat
            android:key="widget_unlimited_size"
            android:title="@string/widget_unlimited_size_label"
            android:summary="@string/widget_unlimited_size_description" />

        <SwitchPreferenceCompat
            android:key="force_widget_resize"
            android:title="@string/force_widget_resize_label"
            android:summary="@string/force_widget_resize_description" />

    </PreferenceCategory>

</PreferenceScreen>